--- a/src/Components/Body Section/List Section/Task.css
+++ b/src/Components/Body Section/List Section/Task.css
@@ -1,3 +1,6 @@
+.taskTitle{
+    background-color: black;
+}
 .productTitle {
     color: rgba(44, 35, 104, 1);
     background-color:rgba(44, 35, 104, 0.11) ;
