--- a/src/Components/Body Section/List Section/Task.css
+++ b/src/Components/Body Section/List Section/Task.css
@@ -28,7 +28,7 @@
     background-color:rgba(58, 46, 139, 0.719) ;
 }
 .productButton:hover{
-background-color: rgba(255, 255, 255, .1);
+background-color: rgba(101, 14, 14, 0.77);
 }
 .row{
     display: block;
