--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,32 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", "Open Sans", "Roboto", "Courier New", Courier,
+    monospace;
+  --primary-background-color: #f4f6f9;
+  --modal-background-color: rgb(88, 84, 84);
+  --secondary-background-color: white;
+  --primary-box-shadow: 0px 2px 4px #eaeaea;
+  --primary-modal-color: rgba(10, 10, 10, 0.63);
+  --success-button: rgba(14, 92, 14, 0.842);
+  --error-button: #cc2525;
+  --edit-button: rgb(197, 119, 2);
+  --pending-color: #e3e5e9;
+  --pending-button: rgb(73, 78, 78);
+  --clicked-link: rgba(39, 173, 173, 0.623);
+}
